--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,11 +41,13 @@ unbind %
 # set-hook -g session-created 'run-shell "~/git_repos/tmux-powerline/powerline.sh init"' # prettifies the window-status segments
 set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
+set -g @catppuccin_window_tabs_enabled on
 set -g @catppuccin_user "on"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
